fix: change the background z-index

--- a/match-match-game/src/components/score-popup/score-popup.css
+++ b/match-match-game/src/components/score-popup/score-popup.css
@@ -12,6 +12,8 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 10;
 }
 .score-popup__popup {
   width: 360px;
@@ -20,7 +22,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 2;
+  z-index: 20;
   background: #fff;
   display: flex;
   flex-direction: column;
